# canlizzigotoherplot

./: .gitignore  package-lock.json  package.json  webpack.config.js
.github/workflows/: rust.yml  webpack.yml
scraper/: Cargo.toml
scraper/src/: main.rs
src/: cal.json  index.html  index.tsx  style.css
src/app/: App.tsx
src/components/: TodayCheck.tsx  Upcoming.tsx
webpage/: package-lock.json  package.json  tsconfig.json  webpack.config.js
webpage/src/: cal.json  index.html  style.css
webpage/src/app/: App.tsx
webpage/src/components/: Footer.tsx  TodayCheck.tsx  Upcoming.tsx
webpage/src/types/: CalEntry.ts
