[package]
name = "stadium_event_scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
ical = "0.11.0"
jiff = "0.1.1"

reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.40.0", features = [ "macros", "rt-multi-thread" ] }
